# metamodule-squinky

./: .gitmodules  CMakeLists.txt  SquinkyLabs.cpp  plugin-mm.json
.github/workflows/: build-metammodule-plugins.yml
metamodule-plugins/: squinkylabs-plug1.mmplugin
src/: mutex-stub.hh
